--- a/site/index.html
+++ b/site/index.html
@@ -37,7 +37,7 @@
 	   <section class="resume" id="resume">
 		 <div class="about-text">
 				<h1>Click here to download resume</h1>
-				<a href="resume.pdf">
+				<a href="https://vinayakbora.github.io/Portfolio/site/resume.pdf">
 				<button class="resumeBtn">Download Resume</button>
 			   </a>
 			</div>
