--- a/site/index.html
+++ b/site/index.html
@@ -81,9 +81,10 @@
                 <div class="about-text">
                     <h1>Hi there<img src="images/wave.gif"></h1>
                     <p>
-						I am Vinayak Bora,I am currently pursuing my Bachelor's in Computer Science.
+						I am Vinayak Bora, currently pursuing my Bachelor's in Computer Science.
 						I am a pre-final year CS under-grad from SRMIST KTR Campus, Chennai.
-						I am a front-end developer and an ML and AI enthusiast. 
+						I am a front-end developer and an ML and AI enthusiast. I am currently working on
+						Android Development and Data Analytics.
                     </p>
                 </div>
             </div>
