--- a/site/index.html
+++ b/site/index.html
@@ -83,7 +83,7 @@
                     <p>
 						I am Vinayak Bora, currently pursuing my Bachelor's in Computer Science.
 						I am a pre-final year CS under-grad from SRMIST KTR Campus, Chennai.
-						I am a front-end developer and an ML and AI enthusiast. I am currently working on
+						I am a Front-End Developer and an ML and AI enthusiast. I am currently working on
 						Android Development and Data Analytics.
                     </p>
                 </div>
