--- a/site/index.html
+++ b/site/index.html
@@ -82,9 +82,10 @@
                     <h1>Hi there<img src="images/wave.gif"></h1>
                     <p>
 						I am Vinayak Bora, currently pursuing my Bachelor's in Computer Science.
-						I am a pre-final year CS under-grad from SRMIST KTR Campus, Chennai.
-						I am a Front-End Developer and an ML and AI enthusiast. I am currently working on
-						Android Development and Data Analytics.
+						I am a final year CS under-grad from SRMIST KTR Campus, Chennai.
+						I am a Front-End developer and an ML enthusiast. I am currently learning 
+			                        Data Analytics with Google Data Analytics Specialization.
+			                        I also have good command in Databases and Android Development.
                     </p>
                 </div>
             </div>
