--- a/site/index.html
+++ b/site/index.html
@@ -83,9 +83,9 @@
                     <p>
 						I am Vinayak Bora, currently pursuing my Bachelor's in Computer Science.
 						I am a final year CS under-grad from SRMIST KTR Campus, Chennai.
-						I am a Front-End developer and an ML enthusiast. I am currently learning 
-			                        Data Analytics with Google Data Analytics Specialization.
-			                        I also have good command in Databases and Android Development.
+						I am an Android Developer and an ML enthusiast. I am currently learning 
+			                        Data Analytics with Google Data Analytics Program.
+			                        I also have a good command in Databases and Front-End Web Development.
                     </p>
                 </div>
             </div>
